--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -1,49 +1,40 @@
-name: Run Jupyter Notebook
+name: Run Jupyter Notebook and Email Output
 
+# Schedule to run at 11:30 PM UTC every day and also allow manual trigger
 on:
   schedule:
-    - cron: '0 0 * * *' # This will run at midnight UTC every day
+    - cron: '30 23 * * *'  # Runs at 11:30 PM UTC every day
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
-  run_notebook:
+  run-notebook:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8' # You can specify any version you need
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'  # Use Python 3.8
 
-      - name: Install Jupyter and dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install jupyter nbconvert
-          # pip install -r requirements.txt Optional: If you have dependencies listed
+    - name: Install dependencies
+      run: |
+        pip install nbconvert
+        pip install notebook
+        pip install pandas
+        pip install sendgrid  # Add sendgrid package to send email
 
-      - name: Run the Jupyter Notebook
-        run: |
-          jupyter nbconvert --to notebook --execute Hackney Tennis Auto Booking.ipynb --output output_notebook.ipynb
-          
-      - name: Email the output (using SendGrid)
-        run: |
-          pip install sendgrid
-          python -c "
-          import sendgrid
-          from sendgrid.helpers.mail import Mail
-          import os
+    - name: Run Jupyter Notebook
+      run: |
+        jupyter nbconvert --to html --execute hackney_tennis_auto_booking.ipynb --output output.html
+      shell: bash
 
-          sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))
-          email_content = open('output_notebook.ipynb', 'r').read()
-          message = Mail(
-              from_email='markonisic1998@gmail.com',
-              to_emails='markonisic@gmail.com',
-              subject='Jupyter Notebook Output',
-              plain_text_content=email_content,
-              html_content=email_content)
-          
-          sg.send(message)
-          "
-        env:
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }} # Set up this secret in your repo settings
+    - name: Send Email with SendGrid
+      env:
+        SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+        SENDGRID_SENDER_EMAIL: ${{ secrets.SENDGRID_SENDER_EMAIL }}
+        SENDGRID_RECIPIENT_EMAIL: ${{ secrets.SENDGRID_RECIPIENT_EMAIL }}
+      run: |
+        python send_email.py
