Adding logic to if statement for manual triggers run_notebook.yml
needed to add logic to if statement that was dependent on time of day to send specific emails, to check if it was a manual trigger, in which case it should send full availability

--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -48,7 +48,7 @@ jobs:
 
       # Send email for full availability report
       - name: Send Full Report Email
-        if: ${{ github.event.schedule }} && (github.event.schedule == '01 00 * * *' || github.event.schedule == '01 08 * * *')
+        if: ${{ github.event_name == 'schedule' && (github.event.schedule == '01 23 * * *' || github.event.schedule == '30 07 * * *') || github.event_name == 'workflow_dispatch' }}
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           SENDGRID_SENDER_EMAIL: ${{ secrets.SENDGRID_SENDER_EMAIL }}
