--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -75,6 +75,10 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      # For checking if availability_updates file is created
+      - name: Debug File Listing
+        run: ls -al
+
       # Check for availability_updates.html and send an email if it exists
       - name: Check and Send Updates Email
         env:
