--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -24,6 +24,16 @@ jobs:
         with:
           python-version: '3.8'
 
+      # Restore cached park_data.json
+      - name: Restore cache
+        uses: actions/cache@v3
+        id: cache-park-data
+        with:
+          path: park_data.json  # Path to the file you want to cache
+          key: park-data-cache
+          restore-keys: |
+            park-data-cache
+
       # Install dependencies
       - name: Install dependencies
         run: |
@@ -31,7 +41,13 @@ jobs:
 
       # Run the Jupyter Notebook
       - name: Run Jupyter Notebook
-        run: jupyter nbconvert --to html --execute hackney_tennis_auto_booking.ipynb --output converted_output.html
+        run: |
+          if [ -f park_data.json ]; then
+            echo "Previous park_data.json found and will be used."
+          else
+            echo "No previous park_data.json found; starting fresh."
+          fi
+          jupyter nbconvert --to html --execute hackney_tennis_auto_booking.ipynb --output converted_output.html
         shell: bash
 
       # Ensure output.html exists for full report schedule
@@ -46,9 +62,17 @@ jobs:
       - name: Check output.html content
         run: cat output.html
 
+      # Save the updated park_data.json to cache
+      - name: Update cache
+        if: steps.cache-park-data.outputs.cache-hit != 'true'  # Save only if cache is missing
+        uses: actions/cache@v3
+        with:
+          path: park_data.json
+          key: park-data-cache
+
       # Send email for full availability report
       - name: Send Full Report Email
-        if: ${{ github.event_name == 'schedule' && (github.event.schedule == '01 00 * * *' || github.event.schedule == '01 08 * * *') || github.event_name == 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'schedule' && (github.event.schedule == '01 23 * * *' || github.event.schedule == '30 07 * * *') || github.event_name == 'workflow_dispatch' }}
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           SENDGRID_SENDER_EMAIL: ${{ secrets.SENDGRID_SENDER_EMAIL }}
@@ -64,6 +88,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      # Restore cached park_data.json
+      - name: Restore cache
+        uses: actions/cache@v3
+        id: cache-park-data
+        with:
+          path: park_data.json
+          key: park-data-cache
+          restore-keys: |
+            park-data-cache
+
       # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -74,10 +108,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-
-      # For checking if availability_updates file is created
-      - name: Debug File Listing
-        run: ls -al
 
       # Check for availability_updates.html and send an email if it exists
       - name: Check and Send Updates Email
@@ -91,4 +121,3 @@ jobs:
             python send_email.py
           else
             echo "No updates found. Skipping email."
-          fi
