--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -6,7 +6,7 @@ on:
     - cron: '01 00 * * *'  # Runs at 11:01 PM UTC daily
     - cron: '01 08 * * *'  # Runs at 7:30 AM UTC daily
   # Schedule for hourly updates
-    - cron: '15 7-00 * * *'  # Runs hourly between 7 AM and 12 AM UTC
+    - cron: '15 7-11 * * *'  # Runs hourly between 7 AM and 11 PM UTC
   workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
           restore-keys: |
             park-data-cache
 
-        # Print the content of the cached file
+      # Print the content of the cached file
       - name: Print park_data.json content
         run: |
           if [ -f park_data.json ]; then
