--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -73,7 +73,7 @@ jobs:
           else
             echo "No previous park_data.json found; starting fresh."
           fi
-          jupyter nbconvert --to notebook --execute hackney_tennis_auto_booking.ipynb --output result.ipynb --ExecutePreprocessor.timeout=600 --stdout
+          python hackney_tennis_auto_booking.py
         shell: bash
 
       # Debug park_data.json after running notebook
