--- a/availability_config.json
+++ b/availability_config.json
@@ -1,98 +1,30 @@
 {
-    "desired_availability": [
-        {"park": "LondonFieldsPark", "day_of_week": "Monday", "time": "17:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Tuesday", "time": "17:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Wednesday", "time": "17:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Thursday", "time": "17:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Friday", "time": "12:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Friday", "time": "13:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Friday", "time": "17:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "09:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "10:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "11:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "12:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "13:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "14:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "15:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "16:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Saturday", "time": "17:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "09:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "10:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "11:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "12:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "13:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "14:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "15:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "16:00"},
-        {"park": "LondonFieldsPark", "day_of_week": "Sunday", "time": "17:00"},
-        {"park": "HackneyDowns", "day_of_week": "Wednesday", "time": "17:00"},
-        {"park": "HackneyDowns", "day_of_week": "Wednesday", "time": "18:00"},
-        {"park": "HackneyDowns", "day_of_week": "Wednesday", "time": "19:00"},
-        {"park": "HackneyDowns", "day_of_week": "Wednesday", "time": "20:00"},
-        {"park": "HackneyDowns", "day_of_week": "Thursday", "time": "17:00"},
-        {"park": "HackneyDowns", "day_of_week": "Thursday", "time": "18:00"},
-        {"park": "HackneyDowns", "day_of_week": "Thursday", "time": "19:00"},
-        {"park": "HackneyDowns", "day_of_week": "Thursday", "time": "20:00"},
-        {"park": "HackneyDowns", "day_of_week": "Friday", "time": "17:00"},
-        {"park": "HackneyDowns", "day_of_week": "Friday", "time": "18:00"},
-        {"park": "HackneyDowns", "day_of_week": "Friday", "time": "19:00"},
-        {"park": "HackneyDowns", "day_of_week": "Friday", "time": "20:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "10:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "11:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "12:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "13:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "14:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "15:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "16:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "17:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "18:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "19:00"},
-        {"park": "HackneyDowns", "day_of_week": "Saturday", "time": "20:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "10:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "11:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "12:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "13:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "14:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "15:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "16:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "17:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "18:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "19:00"},
-        {"park": "HackneyDowns", "day_of_week": "Sunday", "time": "20:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Wednesday", "time": "17:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Wednesday", "time": "18:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Wednesday", "time": "19:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Wednesday", "time": "20:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Thursday", "time": "17:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Thursday", "time": "18:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Thursday", "time": "19:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Thursday", "time": "20:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Friday", "time": "17:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Friday", "time": "18:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Friday", "time": "19:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Friday", "time": "20:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "10:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "11:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "12:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "13:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "14:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "15:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "16:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "17:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "18:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "19:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Saturday", "time": "20:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "10:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "11:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "12:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "13:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "14:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "15:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "16:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "17:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "18:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "19:00"},
-        {"park": "ClissoldParkHackney", "day_of_week": "Sunday", "time": "20:00"},
-        {"park": "AskeGardens", "day_of_week": "Wednesday", "time": "10:00"}
-    ]
+    "desired_availability": {
+        "LondonFieldsPark": {
+            "Monday": ["17:00"],
+            "Tuesday": ["17:00"],
+            "Wednesday": ["17:00"],
+            "Thursday": ["17:00"],
+            "Friday": ["12:00", "13:00", "17:00"],
+            "Saturday": ["09:00", "10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00"],
+            "Sunday": ["09:00", "10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00"]
+        },
+        "HackneyDowns": {
+            "Wednesday": ["17:00", "18:00", "19:00", "20:00"],
+            "Thursday": ["17:00", "18:00", "19:00", "20:00"],
+            "Friday": ["17:00", "18:00", "19:00", "20:00"],
+            "Saturday": ["10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00", "18:00", "19:00", "20:00"],
+            "Sunday": ["10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00", "18:00", "19:00", "20:00"]
+        },
+        "ClissoldParkHackney": {
+            "Wednesday": ["17:00", "18:00", "19:00", "20:00"],
+            "Thursday": ["17:00", "18:00", "19:00", "20:00"],
+            "Friday": ["17:00", "18:00", "19:00", "20:00"],
+            "Saturday": ["10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00", "18:00", "19:00", "20:00"],
+            "Sunday": ["10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00", "18:00", "19:00", "20:00"]
+        },
+        "AskeGardens": {
+            "Wednesday": ["10:00"]
+        }
+    }
 }
